# movement_evolution

./: .gitmodules  CMakeLists.txt  readme.md  todo.txt
include/: Game.hpp
include/agents/: Agent.hpp  Car.hpp  Dog.hpp
include/brains/: DQN_command_center.hpp  DQN_networks.hpp
include/data_structures/: Experience.hpp  Replay_buffer.hpp
include/objects/: Active_capsule.hpp  Active_circle.hpp  Active_rectangle.hpp  Passive_rectangle.hpp  Shape.hpp
plans/: brain.txt  dqn.txt
src/: Game.cpp  main.cpp
src/agents/: Agent.cpp  Car.cpp  Dog.cpp
src/brains/: DQN_networks.cpp
src/data_structures/: Experience.cpp  Replay_buffer.cpp
src/objects/: Active_capsule.cpp  Active_circle.cpp  Active_rectangle.cpp  Passive_rectangle.cpp  Shape.cpp
